spacing issues

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,6 +22,13 @@ body {
 a {
 	text-decoration: none;
 }
+.signInForm{
+	text-align: center;
+}
+header.logo{
+	font-family: monospace;
+	font-size: 2rem;
+}
 .newTripForm{
 	align-items: center;
     display: flex;
@@ -37,6 +44,7 @@ a {
 	background-color: #ffffff5e;
     padding: 0 1rem;
     border-radius: 10px;
+    max-width: 45rem;
 }
 #addLegForm #startLoc, #addLegForm #endLoc {
 	width: 90%;
@@ -99,6 +107,7 @@ a {
 }
 .leftSide{
 	text-align: center;
+	max-width: 45rem;
 }
 .topRow{
 	margin-bottom: 30px;
